kubernetes/apps/ntfy/ntfy/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        app: ntfy
    spec:
      containers:
        - name: ntfy
          image: binwiederhier/ntfy:v2.11.0@sha256:4a7d0f0adc6d5d9fc36e64ab55ef676e76e124a2bdd50ce115b6d9c1c7430294
          resources: {}
          imagePullPolicy: Always
          command: ["ntfy", "serve"]
          ports:
            - containerPort: 80
          volumeMounts:
            - name: user-db
              mountPath: "/var/lib/ntfy"
      volumes:
        - name: user-db
          persistentVolumeClaim:
            claimName: ntfy-pvc
