kubernetes/apps/ntfy/ntfy/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy
spec:
  ingressClassName: external
  rules:
    - host: &host ntfy.solonsstuff.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ntfy
                port:
                  number: 80
  tls:
    - hosts:
        - *host
